feat: add support for ephemeral api keys
